syntax = "proto3";

import "common.proto";

package project_srv_proto;

service ProjectService {
  rpc CreateProject (CreateProjectRequest) returns (CreateProjectResponse);
  rpc GetProjectStatus(GetProjectStatusRequest) returns (GetProjectStatusResponse);
  rpc SetProjectStatus(SetProjectStatusRequest) returns (SetProjectStatusResponse);
  rpc IsProjectExists(IsProjectExistsRequest) returns (IsProjectExistsResponse);
}

message CreateProjectRequest {
  common.ProjectId id = 1;
}

message CreateProjectResponse {
  common.ProjectId id = 1;
}

message GetProjectStatusRequest {
  common.ProjectId id = 1;
}

message GetProjectStatusResponse {
  ProjectStatus status = 1;
}

message SetProjectStatusRequest {
  common.ProjectId id = 1;
  ProjectStatus status = 2;
}

message SetProjectStatusResponse {
  ProjectStatus status = 1;
}

message IsProjectExistsRequest {
  common.ProjectId id = 1;
}

message IsProjectExistsResponse {
  bool exists = 1;
}

enum ProjectStatus {
    ProjectStatus_UNKNOWN = 0;
    ENABLED = 1;
    DISABLED = 2;
    QUOTA_EXCEEDED = 3;
    PENDING_DELETION = 4;
}